--- a/chornado_app/templates/delete_child.html
+++ b/chornado_app/templates/delete_child.html
@@ -4,7 +4,7 @@
     <div class="row">
         <h3>Are you sure you want to delete {{ user.first_name }}?</h3>
         <form action="/delete_child/{{ user.id }}" method="post">
-            {{ template_form.hidden_tag() }}
+            {{ template_form.csrf_token() }}
             {{ template_form.user_id(value=user.id) }}
             {{ template_form.delete(class="btn btn-secondary") }}
             <a href="{{ url_for('routes.index') }}"><button type="button" class="btn btn-secondary">Cancel</button></a>
