--- a/chornado_app/templates/login.html
+++ b/chornado_app/templates/login.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row">
         <form action="/login" method="post">
-            {{ template_form.hidden_tag() }}
+            {{ template_form.csrf_token() }}
             {{ template_form.username.label }}
             {{ template_form.username() }}
             {{ template_form.password.label }}
