--- a/chornado_app/templates/register.html
+++ b/chornado_app/templates/register.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row">
         <form action="/register" method="post">
-            {{ template_form.hidden_tag() }}
+            {{ template_form.csrf_token() }}
             {{ template_form.username.label }}
             {{ template_form.username() }}<br>
             {{ template_form.first_name.label }}
